@@ -96,7 +96,7 @@ public class ExpressionUtil {
                     .map(s -> evalVariable(s, variable)).filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toCollection(ArrayList::new));
 
             // 转换办理人，比如设计器中预设了能办理的人，如果其中包含角色或者部门id等，可以通过此接口进行转换成用户id
             PermissionHandler permissionHandler = FlowEngine.permissionHandler();
@@ -125,7 +125,7 @@ public class ExpressionUtil {
         if (CollUtil.isNotEmpty(value)) {
             return value;
         }
-        return Collections.singletonList(expression);
+        return List.of(expression);
     }
 
     /**
@@ -188,7 +188,7 @@ public class ExpressionUtil {
             return permissions;
         }
         if (nextHandlerAppend) {
-            permissions.addAll(new ArrayList<>(Arrays.asList(nextHandler)));
+            permissions.addAll(Arrays.asList(nextHandler));
         } else {
             permissions = new ArrayList<>(Arrays.asList(nextHandler));
         }
